--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ config/*
 wp/*
 wp-content/plugins/*
 wp-content/uploads/*
+wp-content/themes/municipio-nsr/node_modules/
 !wp-content/plugins/acf-ux-collapse/
 !wp-content/plugins/advanced-custom-fields/
 !wp-content/plugins/better-post-ui/
