--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ wp-content/themes/municipio-nsr/node_modules/
 !wp-content/plugins/wp-nested-pages/
 !wp-content/plugins/varnish-http-purge/
 !wp-content/plugins/nsr-vc-extended/
+!wp-content/plugins/nsr-open-hours/
 
 
 
