--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@ wp-content/themes/municipio-nsr/node_modules/
 !wp-content/plugins/varnish-http-purge/
 !wp-content/plugins/nsr-vc-extended/
 !wp-content/plugins/nsr-open-hours/
-
+!wp-content/plugins/elasticpress-synonyms/
 
 
