--- a/wp-content/plugins/nsr-vc-extended/package.json
+++ b/wp-content/plugins/nsr-vc-extended/package.json
@@ -24,6 +24,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.1.0",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.1.0",
+    "hoek": "^4.2.1"
   }
 }
