--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,10 @@ wp-content/themes/municipio-nsr/node_modules/
 /wp-content/plugins/advanced-custom-fields/acf.php
 /wp-content/mu-plugins
 /wp-config.php
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_search.svg
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_puff_text.svg
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_puff_links.svg
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_puff_link.svg
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_openhours.svg
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_news.svg
+/wp-content/plugins/nsr-vc-extended/dist/img/icn_accordion_kommun.svg
